name:                ghci-reload-demo
version:             0.0.0
synopsis:            A demo of using GHCi as a persistent development environment
description:         A demo of using GHCi as a persistent development environment
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:
build-type:          Simple
cabal-version:       >=1.8

executable ghci-reload-demo
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5,
                     yesod,
                     lifted-base
